# GLO-2100-CLion-Projects

Labo_2/: Adresse.cpp  Adresse.h  CMakeLists.txt  Etudiant.cpp  Etudiant.h  Personne.cpp  Personne.h  Saison.cpp  Util_pointer.hpp  Util_pointeur.h  indice_td2Ex3.cpp  main.cpp
Point_deplacement/: Point.cpp  Point.h  Point.h.rtf  main.cpp  resultats.txt
Point_deplacement/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
TD1/Partie1/: CMakeCache.txt  CMakeLists.txt  main.cpp
TD1/Partie1/nbproject/: configurations.xml  project.xml
TD1/Partie1/nbproject/private/: configurations.xml
TD1/Partie2/: CMakeLists.txt  README.md  main.cpp
TD1/Partie2-Lib/: CMakeLists.txt
TD1/Partie3/: CMakeLists.txt  README.md
TD1/Partie3/tests/: CMakeLists.txt
